@@ -2,16 +2,16 @@ package by.homework.maksim.lesson18;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 public class Task9 {
     public static void main(String[] args) {
-        List<Person> people = Arrays.asList(new Person("John", 25), new Person("Alice", 30), new Person("Bob", 22));
+        List<Person> peoples = Arrays.asList(new Person("John", 25), new Person("Alice", 30), new Person("Bob", 22));
 
-        List<String> name = people.stream()
-                .map(Person::getName)
-                .collect(Collectors.toList());
+        List<String> names = peoples.stream()
+                .map(pe -> pe.getName())
+                .toList();
 
-        System.out.println(name);
+        System.out.println(names);
     }
 }
